--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
             </div>
             <div class="menu-nav">
                 <li class="nav-item">
-                    <a href="/" class="nav-link">
+                    <a href="index.html" class="nav-link">
                         Home
                     </a>
                 </li>
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link">
+                    <a href="contact.html" class="nav-link">
                         How To Reach Me
                     </a>
                 </li>
@@ -60,61 +60,73 @@
         </h2>
         <div class="projects">
             <div class="item">
-                <a href="#!">
-                    <img src="img/projects/project1.jpg" alt="Project">
+                <a href="https://codepen.io/saykanwar/full/zyBbKN">
+                    <img src="img/projects/project1.png" alt="Project">
                 </a>
-                <a href="" class="btn-light">
-                    <i class="fab fa-eye"></i> Project
+                <a href="https://codepen.io/saykanwar/full/zyBbKN" class="btn-light">
+                    <i class="fas fa-eye"></i> Project
                 </a>
-                <a href="" class="btn-dark">
+                <!-- <a href="https://github.com/Kanwarme/weather-app" class="btn-dark">
                     <i class="fab fa-github"></i> Github
-                </a>
+                </a> -->
             </div>
 
             <div class="item">
-                <a href="#!">
-                    <img src="img/projects/project2.jpg" alt="Project">
+                <a href="https://codepen.io/saykanwar/full/WYzjpN">
+                    <img src="img/projects/project2.png" alt="Project">
                 </a>
-                <a href="" class="btn-light">
-                    <i class="fab fa-eye"></i> Project
+                <a href="https://codepen.io/saykanwar/full/WYzjpN" class="btn-light">
+                    <i class="fas fa-eye"></i> Project
                 </a>
-                <a href="" class="btn-dark">
+                <!-- <a href="" class="btn-dark">
                     <i class="fab fa-github"></i> Github
-                </a>
+                </a> -->
             </div>
 
             <div class="item">
-                <a href="#!">
-                    <img src="img/projects/project3.webp" alt="Project">
+                <a href="https://codepen.io/saykanwar/full/aQrNmZ">
+                    <img src="img/projects/project3.png" alt="Project">
                 </a>
-                <a href="" class="btn-light">
-                    <i class="fab fa-eye"></i> Project
+                <a href="https://codepen.io/saykanwar/full/aQrNmZ" class="btn-light">
+                    <i class="fas fa-eye"></i> Project
                 </a>
-                <a href="" class="btn-dark">
+                <!-- <a href="" class="btn-dark">
                     <i class="fab fa-github"></i> Github
-                </a>
+                </a> -->
             </div>
 
             <div class="item">
-                <a href="#!">
-                    <img src="img/projects/project4.jpg" alt="Project">
+                <a href="https://codepen.io/saykanwar/full/qLErEr">
+                    <img src="img/projects/project4.png" alt="Project">
                 </a>
-                <a href="" class="btn-light">
-                    <i class="fab fa-eye"></i> Project
+                <a href="https://codepen.io/saykanwar/full/qLErEr" class="btn-light">
+                    <i class="fas fa-eye"></i> Project
                 </a>
-                <a href="" class="btn-dark">
+                <!-- <a href="" class="btn-dark">
                     <i class="fab fa-github"></i> Github
-                </a>
+                </a> -->
             </div>
 
             <div class="item">
-                <a href="#!">
+                <a href="https://github.com/Kanwarme/school-erp-angular">
                     <img src="img/projects/project5.jpg" alt="Project">
                 </a>
-                <a href="" class="btn-light">
-                    <i class="fab fa-eye"></i> Project
+                <!-- <a href="" class="btn-light">
+                    <i class="fas fa-eye"></i> Project
+                </a> -->
+                <a href="https://github.com/Kanwarme/school-erp-angular" class="btn-dark">
+                    <i class="fab fa-github"></i> Github
                 </a>
-                <a href="" class="btn-dark">
+            </div>
+
+            <div class="item">
+                <a href="https://github.com/Kanwarme/Responsive_Web_Layout">
+                    <img src="img/projects/project6.png" alt="Project">
+                </a>
+                <!-- <a href="" class="btn-light">
+                        <i class="fas fa-eye"></i> Project
+                    </a> -->
+                <a href="https://github.com/Kanwarme/Responsive_Web_Layout" class="btn-dark">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
